--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,13 @@ apply plugin: 'org.springframework.boot'
 version = '0.1.1'
 sourceCompatibility = 1.8
 
+jar {
+    manifest {
+        attributes("Implementation-Title": "miniPOP",
+                   "Implementation-Version": version)
+    }
+}
+
 repositories {
 	mavenCentral()
 }
