Added about error files and spring security.

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,11 @@ dependencies {
 	compile('org.liquibase:liquibase-core')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-websocket')
+	compile('org.springframework.boot:spring-boot-starter-security')
 	runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	
+	compile('org.webjars:bootstrap:4.0.0-alpha.6-1')
 }
