--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.security:spring-security-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
 	
 	compile('org.webjars:bootstrap:4.0.0-alpha.6-1')
