--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+	compile group: 'org.apache.phoenix', name: 'phoenix', version: '4.11.0-HBase-1.2'//, ext: 'pom'
+	
 	
 	compile('org.webjars:bootstrap:4.0.0-alpha.6-1')
 }
